fix button on ios

--- a/components/Button.module.css
+++ b/components/Button.module.css
@@ -1,4 +1,4 @@
-.button, .button:active, .button:focus, .button:focus-within, .button:target, .button:hover, .button:visited, .button:focus-visible {
+.button {
     @apply bg-primary text-white shadow-none normal-case font-bold font-[inherit] py-[12px] leading-[20px] rounded-full
 }
 
